# HKSMethod

./: Cargo.toml  README.md
examples/: multi_special_all_planes.rs  multi_special_allowed.rs  multi_threaded.rs  scale_gradient.rs  scale_gradient_all_planes.rs  single_threaded.rs  special_allowed.rs  stability.rs
src/: constants.rs  lib.rs  main.rs  model.rs  perturbativity.rs  polysolver.rs  simulation.rs  stability.rs
src/models/: main_model.rs  mod.rs  toy_model.rs
src/scanner/: mod.rs  multi_threaded_scanner.rs  scanner.rs
src/scanner/consumer/: allowed_consumer.rs  breaking_scale_consumer.rs  mod.rs  multi_special_allowed_consumer.rs  print_consumer.rs  special_allowed_consumer.rs  stability_consumer.rs  threading_consumer.rs
src/util/: constants.rs  image.rs  mod.rs  perturbativity.rs  polysolver.rs  stability.rs
