[package]
name = "MasterResearchProject"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
indicatif = "0.17.11"
rand = "0.9.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
target-cpu = "native"
debug = false
strip = true  # Strip symbols from binary
